<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.janus.UpcomingTasksFragment"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_taskFragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
        <action
            android:id="@+id/action_taskFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_taskFragment_to_completedTasksFragment"
            app:destination="@id/completedTasksFragment" />
        <action
            android:id="@+id/action_taskFragment_to_newTaskFragment"
            app:destination="@id/newTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.janus.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_changeProfileFragment"
            app:destination="@id/changePicFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_resetPasswordFragment"
            app:destination="@id/resetPassFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/changePicFragment"
        android:name="com.example.janus.ChangePicFragment"
        android:label="fragment_change_picture"
        tools:layout="@layout/fragment_change_picture">
        <action
            android:id="@+id/action_changePicFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/resetPassFragment"
        android:name="com.example.janus.ResetPasswordFragment"
        android:label="fragment_reset_password"
        tools:layout="@layout/fragment_reset_password">
    <action
        android:id="@+id/action_resetPasswordFragment_to_settingsFragment"
        app:destination="@id/settingsFragment"
        />
    </fragment>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.janus.CalendarFragment"
        android:label="fragment_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_calendarFragment_to_calendarDayFragment"
            app:destination="@id/calendarDayFragment" />
    </fragment>
    <fragment
        android:id="@+id/calendarDayFragment"
        android:name="com.example.janus.CalendarDayFragment"
        android:label="fragment_calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
        android:id="@+id/action_calendarDayFragment_to_taskDetailsFragment"
        app:destination="@id/taskDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.janus.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
    </fragment>

    <fragment
        android:id="@+id/chatPageFragment"
        android:name="com.example.janus.ChatPageFragment"
        android:label="fragment_chat_page"
        tools:layout="@layout/fragment_chat_page" >
        <action
            android:id="@+id/action_chatPageFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_chatPageFragment_to_friendRequestsFragment"
            app:destination="@id/friendRequestsFragment" />
    </fragment>

    <action
        android:id="@+id/chatPageFragment_to_chatFragment"
        app:destination="@id/chatFragment"/>

    <fragment
        android:id="@+id/taskDetailsFragment"
        android:name="com.example.janus.TaskDetailsFragment"
        android:label="fragment_task_details"
        tools:layout="@layout/fragment_task_details" >
        <action
            android:id="@+id/action_taskDetailsFragment_to_editTaskFragment"
            app:destination="@id/editTaskFragment" />
        <action
            android:id="@+id/action_taskDetailsFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>
    <fragment
        android:id="@+id/newTaskFragment"
        android:name="com.example.janus.NewTaskFragment"
        android:label="fragment_new_task"
        tools:layout="@layout/fragment_new_task" >
        <action
            android:id="@+id/action_newTaskFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:popUpTo="@id/taskFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/logScreenFragment"
        android:name="com.example.janus.logScreenFragment"
        android:label="fragment_log_screen"
        tools:layout="@layout/fragment_log_screen" >
        <action
            android:id="@+id/action_logScreenFragment_to_forgotEmailFragment"
            app:destination="@id/forgotEmailFragment" />
        <action
            android:id="@+id/action_logScreenFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_logScreenFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.janus.ForgotPasswordFragment"
        android:label="fragment_forgot_password"
        tools:layout="@layout/fragment_forgot_password" >
        <action
        android:id="@+id/action_forgotPassFragment_to_forgotEmailFragment"
        app:destination="@id/forgotEmailFragment" />
    </fragment>
    <fragment
        android:id="@+id/forgotEmailFragment"
        android:name="com.example.janus.ForgotEmailFragment"
        android:label="fragment_forgot_email"
        tools:layout="@layout/fragment_forgot_email" >
        <action
        android:id="@+id/action_forgotEmailFragment_to_menuFragment"
        app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerScreenFragment"
        android:name="com.example.janus.RegisterScreenFragment"
        android:label="fragment_register_screen"
        tools:layout="@layout/fragment_register_screen" >
        <action
            android:id="@+id/action_registerScreenFragment_to_regCompleteFragment"
            app:destination="@id/regCompleteFragment"
            />
        <action
            android:id="@+id/action_registerScreenFragment_to_startFragment"
            app:destination="@id/startFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/regCompleteFragment"
        android:name="com.example.janus.RegCompleteFragment"
        android:label="fragment_reg_complete"
        tools:layout="@layout/fragment_reg_complete" >
        <action
            android:id="@+id/action_regCompleteFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.janus.MenuFragment"
        android:label="fragment_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_registerScreenFragment"
            app:destination="@id/registerScreenFragment" />
        <action
            android:id="@+id/action_menuFragment_to_logScreenFragment"
            app:destination="@id/logScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.janus.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_startFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
        <action
            android:id="@+id/action_startFragment_to_newTaskFragment"
            app:destination="@id/newTaskFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editTaskFragment"
        android:name="com.example.janus.EditTaskFragment"
        android:label="EditTaskFragment">
        <action
            android:id="@+id/action_editTaskFragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
        <action
            android:id="@+id/action_editTaskFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="janus://navtaskcreator.com/taskcreator" />
    </fragment>
    <fragment
        android:id="@+id/friendRequestsFragment"
        android:name="com.example.janus.FriendRequestsFragment"
        android:label="fragment_friend_requests"
        tools:layout="@layout/fragment_friend_requests" />
    <fragment
        android:id="@+id/completedTasksFragment"
        android:name="com.example.janus.CompletedTasksFragment"
        android:label="fragment_completed_task"
        tools:layout="@layout/fragment_completed_task" >
        <action
            android:id="@+id/action_completedTasksFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
        <action
            android:id="@+id/action_completedTasksFragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
    </fragment>
</navigation>