package com.example.janus;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.CoreMatchers.anything;

import android.os.SystemClock;

import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import junit.framework.AssertionFailedError;
import junit.framework.TestCase;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
public class NavClickTest extends TestCase {
    @Rule
    public ActivityScenarioRule<MainActivity> scenario = new ActivityScenarioRule<MainActivity>(MainActivity.class);

    @Test
    public void validateNavBarBehavior() throws InterruptedException {

        // attempts to make sure right view is displayed, if not throws error
        try {
            onView((withId(R.id.taskFragment))).check(matches(isDisplayed()));
        } catch (AssertionFailedError e) {

        }
        // affirm calendar nav works
        SystemClock.sleep(2000);
        onView(withId(R.id.calendarFragment)).perform(click());
        SystemClock.sleep(2000);
        try {
            onView((withId(R.id.calendarFragment))).check(matches(isDisplayed()));
        } catch (AssertionFailedError e) {

        }

        // affirm chat nav works
        SystemClock.sleep(2000);
        onView(withId(R.id.chatPageFragment)).perform(click());
        SystemClock.sleep(2000);
        try {
            onView((withId(R.id.chatPageFragment))).check(matches(isDisplayed()));
        } catch (AssertionFailedError e) {

        }

        // affirm back to task page works
        SystemClock.sleep(2000);
        onView(withId(R.id.taskFragment)).perform(click());
        SystemClock.sleep(2000);
        try {
            onView((withId(R.id.taskFragment))).check(matches(isDisplayed()));
        } catch (AssertionFailedError e) {

        }
}
}